--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ Author URI: https://elementor.com/?utm_source=wp-themes&utm_campaign=author-uri&
 Text Domain: hello-elementor
 Description: A lightweight and minimalist WordPress theme for Elementor page builder.
 Tags: accessibility-ready,flexible-header,custom-colors,custom-menu,custom-logo,featured-images,rtl-language-support,threaded-comments,translation-ready
-Version: 2.8.1.1697434085
-Updated: 2023-10-16 05:28:05
+Version: 4.0
+Updated: 09/19/2024
 */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
